[[bin]]
name = "polkadot"
path = "src/main.rs"

[package]
name = "polkadot"
description = "Implementation of a https://polkadot.network node in Rust based on the Substrate framework."
license = "GPL-3.0-only"
version = "0.8.29"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
readme = "README.md"

[dependencies]
cli = { package = "polkadot-cli", path = "cli" }
color-eyre = "0.5.10"
thiserror = "1.0.23"
futures = "0.3.12"
service = { package = "polkadot-service", path = "node/service" }
parity-util-mem = { version = "*", default-features = false, features = ["jemalloc-global"] }

[dev-dependencies]
assert_cmd = "1.0.2"
nix = "0.19.1"
tempfile = "3.2.0"

[workspace]
members = [
	"bridges/primitives/kusama",
	"bridges/primitives/polkadot",
	"bridges/primitives/runtime",
	"cli",
	"core-primitives",
	"erasure-coding",
	"primitives",
	"runtime/common",
	"runtime/parachains",
	"runtime/polkadot",
	"runtime/kusama",
	"runtime/rococo",
	"runtime/westend",
	"runtime/test-runtime",
	"statement-table",
	"xcm",
	"xcm/xcm-builder",
	"xcm/xcm-executor",
	"node/collation-generation",
	"node/core/approval-voting",
	"node/core/av-store",
	"node/core/backing",
	"node/core/bitfield-signing",
	"node/core/candidate-selection",
	"node/core/candidate-validation",
	"node/core/chain-api",
	"node/core/proposer",
	"node/core/provisioner",
	"node/core/runtime-api",
	"node/network/approval-distribution",
	"node/network/bridge",
	"node/network/pov-distribution",
	"node/network/protocol",
	"node/network/statement-distribution",
	"node/network/bitfield-distribution",
	"node/network/availability-distribution",
	"node/network/availability-recovery",
	"node/network/collator-protocol",
	"node/network/gossip-support",
	"node/overseer",
	"node/primitives",
	"node/service",
	"node/subsystem",
	"node/subsystem/dispatch-gen",
	"node/subsystem-test-helpers",
	"node/subsystem-util",
	"node/jaeger",
	"node/metered-channel",
	"node/test/client",
	"node/test/service",
	"parachain/test-parachains",
	"parachain/test-parachains/adder",
	"parachain/test-parachains/adder/collator",
]

[badges]
maintenance = { status = "actively-developed" }

# make sure dev builds with backtrace do
# not slow us down
[profile.dev.package.backtrace]
opt-level = 3

[profile.release]
# Polkadot runtime requires unwinding.
panic = "unwind"

[features]
runtime-benchmarks=["cli/runtime-benchmarks"]
real-overseer=["cli/real-overseer"]
try-runtime = ["cli/try-runtime"]

# Configuration for building a .deb package - for use with `cargo-deb`
[package.metadata.deb]
name = "polkadot"
extended-description = "Implementation of a https://polkadot.network node in Rust based on the Substrate framework."
section = "misc"
maintainer = "martin@parity.io"
license-file = ["LICENSE", "0"]
# https://www.debian.org/doc/debian-policy/ch-maintainerscripts.html
maintainer-scripts = "scripts/packaging/deb-maintainer-scripts"
assets = [
	["target/release/polkadot", "/usr/bin/", "755"],
	["scripts/packaging/polkadot.service", "/lib/systemd/system/", "644"]
]
conf-files = [
	"/etc/default/polkadot"
]

# Configuration for building an .rpm package - for use with `cargo-rpm`
[package.metadata.rpm]
package = "polkadot"

[package.metadata.rpm.cargo]
buildflags = ["--release"]

[package.metadata.rpm.targets]
polkadot = { path = "/usr/bin/polkadot" }

[package.metadata.rpm.files]
"../scripts/packaging/polkadot.service" = { path = "/usr/lib/systemd/system/polkadot.service", mode = "644" }


[patch.'https://github.com/paritytech/substrate']
sp-core = { git="https://github.com/cheme/substrate", branch="snapshot_draft" }
sc-client-api = { git="https://github.com/cheme/substrate", branch="snapshot_draft" }
pallet-treasury = { git="https://github.com/cheme/substrate", branch="snapshot_draft" }
pallet-randomness-collective-flip = { git="https://github.com/cheme/substrate", branch="snapshot_draft" }
pallet-babe = { git="https://github.com/cheme/substrate", branch="snapshot_draft" }
sp-trie = { git="https://github.com/cheme/substrate", branch="snapshot_draft" }
sp-keyring = { git="https://github.com/cheme/substrate", branch="snapshot_draft" }
pallet-timestamp = { git="https://github.com/cheme/substrate", branch="snapshot_draft" }
frame-system = { git="https://github.com/cheme/substrate", branch="snapshot_draft" }
frame-try-runtime = { git="https://github.com/cheme/substrate", branch="snapshot_draft" }
frame-system-benchmarking = { git="https://github.com/cheme/substrate", branch="snapshot_draft" }
pallet-staking = { git="https://github.com/cheme/substrate", branch="snapshot_draft" }
frame-support = { git="https://github.com/cheme/substrate", branch="snapshot_draft" }
pallet-session = { git="https://github.com/cheme/substrate", branch="snapshot_draft" }
pallet-balances = { git="https://github.com/cheme/substrate", branch="snapshot_draft" }
pallet-authorship = { git="https://github.com/cheme/substrate", branch="snapshot_draft" }
sp-staking = { git="https://github.com/cheme/substrate", branch="snapshot_draft" }
sp-runtime = { git="https://github.com/cheme/substrate", branch="snapshot_draft" }
sp-io = { git="https://github.com/cheme/substrate", branch="snapshot_draft" }
sp-std = { git="https://github.com/cheme/substrate", branch="snapshot_draft" }
sp-inherents = { git="https://github.com/cheme/substrate", branch="snapshot_draft" }
sp-api = { git="https://github.com/cheme/substrate", branch="snapshot_draft" }
pallet-sudo = { git="https://github.com/cheme/substrate", branch="snapshot_draft" }
frame-system-rpc-runtime-api = { git="https://github.com/cheme/substrate", branch="snapshot_draft" }
pallet-staking-reward-curve = { git="https://github.com/cheme/substrate", branch="snapshot_draft" }
pallet-offences = { git="https://github.com/cheme/substrate", branch="snapshot_draft" }
pallet-nicks = { git="https://github.com/cheme/substrate", branch="snapshot_draft" }
pallet-membership = { git="https://github.com/cheme/substrate", branch="snapshot_draft" }
pallet-indices = { git="https://github.com/cheme/substrate", branch="snapshot_draft" }
pallet-im-online = { git="https://github.com/cheme/substrate", branch="snapshot_draft" }
pallet-identity = { git="https://github.com/cheme/substrate", branch="snapshot_draft" }
pallet-grandpa = { git="https://github.com/cheme/substrate", branch="snapshot_draft" }
frame-executive = { git="https://github.com/cheme/substrate", branch="snapshot_draft" }
pallet-elections-phragmen = { git="https://github.com/cheme/substrate", branch="snapshot_draft" }
pallet-election-provider-multi-phase = { git="https://github.com/cheme/substrate", branch="snapshot_draft" }
frame-election-provider-support = { git="https://github.com/cheme/substrate", branch="snapshot_draft" }
frame-metadata = { git="https://github.com/cheme/substrate", branch="snapshot_draft" }
frame-support-test = { git="https://github.com/cheme/substrate", branch="snapshot_draft" }
remote-externalities = { git="https://github.com/cheme/substrate", branch="snapshot_draft" }
sc-informant = { git="https://github.com/cheme/substrate", branch="snapshot_draft" }
sc-finality-grandpa-warp-sync = { git="https://github.com/cheme/substrate", branch="snapshot_draft" }
sp-database = { git="https://github.com/cheme/substrate", branch="snapshot_draft" }
substrate-browser-utils = { git="https://github.com/cheme/substrate", branch="snapshot_draft" }
try-runtime-cli = { git="https://github.com/cheme/substrate", branch="snapshot_draft" }
pallet-democracy = { git="https://github.com/cheme/substrate", branch="snapshot_draft" }
pallet-collective = { git="https://github.com/cheme/substrate", branch="snapshot_draft" }
pallet-transaction-payment-rpc = { git="https://github.com/cheme/substrate", branch="snapshot_draft" }
pallet-transaction-payment-rpc-runtime-api = { git="https://github.com/cheme/substrate", branch="snapshot_draft" }
pallet-transaction-payment = { git="https://github.com/cheme/substrate", branch="snapshot_draft" }
pallet-authority-discovery = { git="https://github.com/cheme/substrate", branch="snapshot_draft" }
sp-transaction-pool = { git="https://github.com/cheme/substrate", branch="snapshot_draft" }
sp-version = { git="https://github.com/cheme/substrate", branch="snapshot_draft" }
sp-session = { git="https://github.com/cheme/substrate", branch="snapshot_draft" }
sp-offchain = { git="https://github.com/cheme/substrate", branch="snapshot_draft" }
sp-consensus-babe = { git="https://github.com/cheme/substrate", branch="snapshot_draft" }
pallet-recovery = { git="https://github.com/cheme/substrate", branch="snapshot_draft" }
pallet-society = { git="https://github.com/cheme/substrate", branch="snapshot_draft" }
fork-tree = { git="https://github.com/cheme/substrate", branch="snapshot_draft" }
pallet-utility = { git="https://github.com/cheme/substrate", branch="snapshot_draft" }
sc-network = { git="https://github.com/cheme/substrate", branch="snapshot_draft" }
sc-cli = { git="https://github.com/cheme/substrate", branch="snapshot_draft" }
sc-client-db = { git="https://github.com/cheme/substrate", branch="snapshot_draft" }
sc-executor = { git="https://github.com/cheme/substrate", branch="snapshot_draft" }
sc-service = { git="https://github.com/cheme/substrate", branch="snapshot_draft" }
sc-keystore = { git="https://github.com/cheme/substrate", branch="snapshot_draft" }
sp-authority-discovery = { git="https://github.com/cheme/substrate", branch="snapshot_draft" }
sp-block-builder = { git="https://github.com/cheme/substrate", branch="snapshot_draft" }
sp-blockchain = { git="https://github.com/cheme/substrate", branch="snapshot_draft" }
sc-network-gossip = { git="https://github.com/cheme/substrate", branch="snapshot_draft" }
sp-state-machine = { git="https://github.com/cheme/substrate", branch="snapshot_draft" }
sp-externalities = { git="https://github.com/cheme/substrate", branch="snapshot_draft" }
sp-runtime-interface = { git="https://github.com/cheme/substrate", branch="snapshot_draft" }
sp-application-crypto = { git="https://github.com/cheme/substrate", branch="snapshot_draft" }
sp-serializer = { git="https://github.com/cheme/substrate", branch="snapshot_draft" }
sc-rpc = { git="https://github.com/cheme/substrate", branch="snapshot_draft" }
substrate-frame-rpc-system = { git="https://github.com/cheme/substrate", branch="snapshot_draft" }
sc-authority-discovery = { git="https://github.com/cheme/substrate", branch="snapshot_draft" }
sc-chain-spec = { git="https://github.com/cheme/substrate", branch="snapshot_draft" }
sc-finality-grandpa = { git="https://github.com/cheme/substrate", branch="snapshot_draft" }
sc-telemetry = { git="https://github.com/cheme/substrate", branch="snapshot_draft" }
sc-transaction-pool = { git="https://github.com/cheme/substrate", branch="snapshot_draft" }
sp-timestamp = { git="https://github.com/cheme/substrate", branch="snapshot_draft" }
sc-block-builder = { git="https://github.com/cheme/substrate", branch="snapshot_draft" }
sp-finality-grandpa = { git="https://github.com/cheme/substrate", branch="snapshot_draft" }
sp-tracing = { git="https://github.com/cheme/substrate", branch="snapshot_draft" }
substrate-prometheus-endpoint = { git="https://github.com/cheme/substrate", branch="snapshot_draft" }
sp-keystore = { git="https://github.com/cheme/substrate", branch="snapshot_draft" }
frame-benchmarking = { git="https://github.com/cheme/substrate", branch="snapshot_draft" }
frame-benchmarking-cli = { git="https://github.com/cheme/substrate", branch="snapshot_draft" }
pallet-bounties = { git="https://github.com/cheme/substrate", branch="snapshot_draft" }
pallet-multisig = { git="https://github.com/cheme/substrate", branch="snapshot_draft" }
pallet-scheduler = { git="https://github.com/cheme/substrate", branch="snapshot_draft" }
pallet-tips = { git="https://github.com/cheme/substrate", branch="snapshot_draft" }
pallet-proxy = { git="https://github.com/cheme/substrate", branch="snapshot_draft" }
pallet-vesting = { git="https://github.com/cheme/substrate", branch="snapshot_draft" }
sc-basic-authorship = { git="https://github.com/cheme/substrate", branch="snapshot_draft" }
sp-consensus = { git="https://github.com/cheme/substrate", branch="snapshot_draft" }
sp-consensus-slots = { git="https://github.com/cheme/substrate", branch="snapshot_draft" }
sc-consensus = { git="https://github.com/cheme/substrate", branch="snapshot_draft" }
sc-consensus-babe = { git="https://github.com/cheme/substrate", branch="snapshot_draft" }
sc-consensus-babe-rpc = { git="https://github.com/cheme/substrate", branch="snapshot_draft" }
sc-consensus-epochs = { git="https://github.com/cheme/substrate", branch="snapshot_draft" }
sc-consensus-slots = { git="https://github.com/cheme/substrate", branch="snapshot_draft" }
sp-consensus-vrf = { git="https://github.com/cheme/substrate", branch="snapshot_draft" }
sp-consensus-aura = { git="https://github.com/cheme/substrate", branch="snapshot_draft" }
sp-wasm-interface = { git="https://github.com/cheme/substrate", branch="snapshot_draft" }
sc-finality-grandpa-rpc = { git="https://github.com/cheme/substrate", branch="snapshot_draft" }
sc-light = { git="https://github.com/cheme/substrate", branch="snapshot_draft" }
sc-sync-state-rpc = { git="https://github.com/cheme/substrate", branch="snapshot_draft" }
sp-arithmetic = { git="https://github.com/cheme/substrate", branch="snapshot_draft" }
sp-storage = { git="https://github.com/cheme/substrate", branch="snapshot_draft" }
sc-tracing = { git="https://github.com/cheme/substrate", branch="snapshot_draft" }
sp-test-primitives = { git="https://github.com/cheme/substrate", branch="snapshot_draft" }
substrate-build-script-utils = { git="https://github.com/cheme/substrate", branch="snapshot_draft" }
substrate-test-client = { git="https://github.com/cheme/substrate", branch="snapshot_draft" }
substrate-test-runtime = { git="https://github.com/cheme/substrate", branch="snapshot_draft" }
substrate-test-runtime-client = { git="https://github.com/cheme/substrate", branch="snapshot_draft" }
substrate-test-utils = { git="https://github.com/cheme/substrate", branch="snapshot_draft" }
substrate-wasm-builder = { git="https://github.com/cheme/substrate", branch="snapshot_draft" }
sp-npos-elections = { git="https://github.com/cheme/substrate", branch="snapshot_draft" }
sp-npos-elections-compact = { git="https://github.com/cheme/substrate", branch="snapshot_draft" }
pallet-offences-benchmarking = { git="https://github.com/cheme/substrate", branch="snapshot_draft" }
pallet-session-benchmarking = { git="https://github.com/cheme/substrate", branch="snapshot_draft" }

[patch.crates-io]
kvdb-rocksdb = { git="https://github.com/cheme/parity-common", branch="historied-db-cache" }
