[[bin]]
name = "polkadot"
path = "src/main.rs"

[package]
name = "polkadot"
description = "Implementation of a https://polkadot.network node in Rust based on the Substrate framework."
license = "GPL-3.0-only"
version = "0.8.29"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
readme = "README.md"

[dependencies]
cli = { package = "polkadot-cli", path = "cli" }
color-eyre = "0.5.10"
thiserror = "1.0.23"
futures = "0.3.12"
service = { package = "polkadot-service", path = "node/service" }
parity-util-mem = { version = "*", default-features = false, features = ["jemalloc-global"] }

[dev-dependencies]
assert_cmd = "1.0.2"
nix = "0.19.1"
tempfile = "3.2.0"

[workspace]
members = [
	"bridges/primitives/kusama",
	"bridges/primitives/polkadot",
	"bridges/primitives/runtime",
	"cli",
	"core-primitives",
	"erasure-coding",
	"primitives",
	"runtime/common",
	"runtime/parachains",
	"runtime/polkadot",
	"runtime/kusama",
	"runtime/rococo",
	"runtime/westend",
	"runtime/test-runtime",
	"statement-table",
	"xcm",
	"xcm/xcm-builder",
	"xcm/xcm-executor",
	"node/collation-generation",
	"node/core/approval-voting",
	"node/core/av-store",
	"node/core/backing",
	"node/core/bitfield-signing",
	"node/core/candidate-selection",
	"node/core/candidate-validation",
	"node/core/chain-api",
	"node/core/proposer",
	"node/core/provisioner",
	"node/core/runtime-api",
	"node/network/approval-distribution",
	"node/network/bridge",
	"node/network/pov-distribution",
	"node/network/protocol",
	"node/network/statement-distribution",
	"node/network/bitfield-distribution",
	"node/network/availability-distribution",
	"node/network/availability-recovery",
	"node/network/collator-protocol",
	"node/network/gossip-support",
	"node/overseer",
	"node/primitives",
	"node/service",
	"node/subsystem",
	"node/subsystem/dispatch-gen",
	"node/subsystem-test-helpers",
	"node/subsystem-util",
	"node/jaeger",
	"node/metered-channel",
	"node/test/client",
	"node/test/service",
	"parachain/test-parachains",
	"parachain/test-parachains/adder",
	"parachain/test-parachains/adder/collator",
]

[badges]
maintenance = { status = "actively-developed" }

# make sure dev builds with backtrace do
# not slow us down
[profile.dev.package.backtrace]
opt-level = 3

[profile.release]
# Polkadot runtime requires unwinding.
panic = "unwind"

[features]
runtime-benchmarks=["cli/runtime-benchmarks"]
real-overseer=["cli/real-overseer"]
try-runtime = ["cli/try-runtime"]

# Configuration for building a .deb package - for use with `cargo-deb`
[package.metadata.deb]
name = "polkadot"
extended-description = "Implementation of a https://polkadot.network node in Rust based on the Substrate framework."
section = "misc"
maintainer = "martin@parity.io"
license-file = ["LICENSE", "0"]
# https://www.debian.org/doc/debian-policy/ch-maintainerscripts.html
maintainer-scripts = "scripts/packaging/deb-maintainer-scripts"
assets = [
	["target/release/polkadot", "/usr/bin/", "755"],
	["scripts/packaging/polkadot.service", "/lib/systemd/system/", "644"]
]
conf-files = [
	"/etc/default/polkadot"
]

# Configuration for building an .rpm package - for use with `cargo-rpm`
[package.metadata.rpm]
package = "polkadot"

[package.metadata.rpm.cargo]
buildflags = ["--release"]

[package.metadata.rpm.targets]
polkadot = { path = "/usr/bin/polkadot" }

[package.metadata.rpm.files]
"../scripts/packaging/polkadot.service" = { path = "/usr/lib/systemd/system/polkadot.service", mode = "644" }


[patch.'https://github.com/paritytech/substrate']
sp-core = { git="https://github.com/cheme/substrate", branch="flat_snapshot" }
sc-client-api = { git="https://github.com/cheme/substrate", branch="flat_snapshot" }
pallet-treasury = { git="https://github.com/cheme/substrate", branch="flat_snapshot" }
pallet-randomness-collective-flip = { git="https://github.com/cheme/substrate", branch="flat_snapshot" }
pallet-babe = { git="https://github.com/cheme/substrate", branch="flat_snapshot" }
sp-trie = { git="https://github.com/cheme/substrate", branch="flat_snapshot" }
sp-keyring = { git="https://github.com/cheme/substrate", branch="flat_snapshot" }
pallet-timestamp = { git="https://github.com/cheme/substrate", branch="flat_snapshot" }
frame-system = { git="https://github.com/cheme/substrate", branch="flat_snapshot" }
frame-try-runtime = { git="https://github.com/cheme/substrate", branch="flat_snapshot" }
frame-system-benchmarking = { git="https://github.com/cheme/substrate", branch="flat_snapshot" }
pallet-staking = { git="https://github.com/cheme/substrate", branch="flat_snapshot" }
frame-support = { git="https://github.com/cheme/substrate", branch="flat_snapshot" }
pallet-session = { git="https://github.com/cheme/substrate", branch="flat_snapshot" }
pallet-balances = { git="https://github.com/cheme/substrate", branch="flat_snapshot" }
pallet-authorship = { git="https://github.com/cheme/substrate", branch="flat_snapshot" }
sp-staking = { git="https://github.com/cheme/substrate", branch="flat_snapshot" }
sp-runtime = { git="https://github.com/cheme/substrate", branch="flat_snapshot" }
sp-io = { git="https://github.com/cheme/substrate", branch="flat_snapshot" }
sp-std = { git="https://github.com/cheme/substrate", branch="flat_snapshot" }
sp-inherents = { git="https://github.com/cheme/substrate", branch="flat_snapshot" }
sp-api = { git="https://github.com/cheme/substrate", branch="flat_snapshot" }
pallet-sudo = { git="https://github.com/cheme/substrate", branch="flat_snapshot" }
frame-system-rpc-runtime-api = { git="https://github.com/cheme/substrate", branch="flat_snapshot" }
pallet-staking-reward-curve = { git="https://github.com/cheme/substrate", branch="flat_snapshot" }
pallet-offences = { git="https://github.com/cheme/substrate", branch="flat_snapshot" }
pallet-nicks = { git="https://github.com/cheme/substrate", branch="flat_snapshot" }
pallet-membership = { git="https://github.com/cheme/substrate", branch="flat_snapshot" }
pallet-indices = { git="https://github.com/cheme/substrate", branch="flat_snapshot" }
pallet-im-online = { git="https://github.com/cheme/substrate", branch="flat_snapshot" }
pallet-identity = { git="https://github.com/cheme/substrate", branch="flat_snapshot" }
pallet-grandpa = { git="https://github.com/cheme/substrate", branch="flat_snapshot" }
frame-executive = { git="https://github.com/cheme/substrate", branch="flat_snapshot" }
pallet-elections-phragmen = { git="https://github.com/cheme/substrate", branch="flat_snapshot" }
pallet-election-provider-multi-phase = { git="https://github.com/cheme/substrate", branch="flat_snapshot" }
frame-election-provider-support = { git="https://github.com/cheme/substrate", branch="flat_snapshot" }
frame-metadata = { git="https://github.com/cheme/substrate", branch="flat_snapshot" }
frame-support-test = { git="https://github.com/cheme/substrate", branch="flat_snapshot" }
remote-externalities = { git="https://github.com/cheme/substrate", branch="flat_snapshot" }
sc-informant = { git="https://github.com/cheme/substrate", branch="flat_snapshot" }
sc-finality-grandpa-warp-sync = { git="https://github.com/cheme/substrate", branch="flat_snapshot" }
sp-database = { git="https://github.com/cheme/substrate", branch="flat_snapshot" }
substrate-browser-utils = { git="https://github.com/cheme/substrate", branch="flat_snapshot" }
try-runtime-cli = { git="https://github.com/cheme/substrate", branch="flat_snapshot" }
pallet-democracy = { git="https://github.com/cheme/substrate", branch="flat_snapshot" }
pallet-collective = { git="https://github.com/cheme/substrate", branch="flat_snapshot" }
pallet-transaction-payment-rpc = { git="https://github.com/cheme/substrate", branch="flat_snapshot" }
pallet-transaction-payment-rpc-runtime-api = { git="https://github.com/cheme/substrate", branch="flat_snapshot" }
pallet-transaction-payment = { git="https://github.com/cheme/substrate", branch="flat_snapshot" }
pallet-authority-discovery = { git="https://github.com/cheme/substrate", branch="flat_snapshot" }
sp-transaction-pool = { git="https://github.com/cheme/substrate", branch="flat_snapshot" }
sp-version = { git="https://github.com/cheme/substrate", branch="flat_snapshot" }
sp-session = { git="https://github.com/cheme/substrate", branch="flat_snapshot" }
sp-offchain = { git="https://github.com/cheme/substrate", branch="flat_snapshot" }
sp-consensus-babe = { git="https://github.com/cheme/substrate", branch="flat_snapshot" }
pallet-recovery = { git="https://github.com/cheme/substrate", branch="flat_snapshot" }
pallet-society = { git="https://github.com/cheme/substrate", branch="flat_snapshot" }
fork-tree = { git="https://github.com/cheme/substrate", branch="flat_snapshot" }
pallet-utility = { git="https://github.com/cheme/substrate", branch="flat_snapshot" }
sc-network = { git="https://github.com/cheme/substrate", branch="flat_snapshot" }
sc-cli = { git="https://github.com/cheme/substrate", branch="flat_snapshot" }
sc-client-db = { git="https://github.com/cheme/substrate", branch="flat_snapshot" }
sc-executor = { git="https://github.com/cheme/substrate", branch="flat_snapshot" }
sc-service = { git="https://github.com/cheme/substrate", branch="flat_snapshot" }
sc-keystore = { git="https://github.com/cheme/substrate", branch="flat_snapshot" }
sp-authority-discovery = { git="https://github.com/cheme/substrate", branch="flat_snapshot" }
sp-block-builder = { git="https://github.com/cheme/substrate", branch="flat_snapshot" }
sp-blockchain = { git="https://github.com/cheme/substrate", branch="flat_snapshot" }
sc-network-gossip = { git="https://github.com/cheme/substrate", branch="flat_snapshot" }
sp-state-machine = { git="https://github.com/cheme/substrate", branch="flat_snapshot" }
sp-externalities = { git="https://github.com/cheme/substrate", branch="flat_snapshot" }
sp-runtime-interface = { git="https://github.com/cheme/substrate", branch="flat_snapshot" }
sp-application-crypto = { git="https://github.com/cheme/substrate", branch="flat_snapshot" }
sp-serializer = { git="https://github.com/cheme/substrate", branch="flat_snapshot" }
sc-rpc = { git="https://github.com/cheme/substrate", branch="flat_snapshot" }
substrate-frame-rpc-system = { git="https://github.com/cheme/substrate", branch="flat_snapshot" }
sc-authority-discovery = { git="https://github.com/cheme/substrate", branch="flat_snapshot" }
sc-chain-spec = { git="https://github.com/cheme/substrate", branch="flat_snapshot" }
sc-finality-grandpa = { git="https://github.com/cheme/substrate", branch="flat_snapshot" }
sc-telemetry = { git="https://github.com/cheme/substrate", branch="flat_snapshot" }
sc-transaction-pool = { git="https://github.com/cheme/substrate", branch="flat_snapshot" }
sp-timestamp = { git="https://github.com/cheme/substrate", branch="flat_snapshot" }
sc-block-builder = { git="https://github.com/cheme/substrate", branch="flat_snapshot" }
sp-finality-grandpa = { git="https://github.com/cheme/substrate", branch="flat_snapshot" }
sp-tracing = { git="https://github.com/cheme/substrate", branch="flat_snapshot" }
substrate-prometheus-endpoint = { git="https://github.com/cheme/substrate", branch="flat_snapshot" }
sp-keystore = { git="https://github.com/cheme/substrate", branch="flat_snapshot" }
frame-benchmarking = { git="https://github.com/cheme/substrate", branch="flat_snapshot" }
frame-benchmarking-cli = { git="https://github.com/cheme/substrate", branch="flat_snapshot" }
pallet-bounties = { git="https://github.com/cheme/substrate", branch="flat_snapshot" }
pallet-multisig = { git="https://github.com/cheme/substrate", branch="flat_snapshot" }
pallet-scheduler = { git="https://github.com/cheme/substrate", branch="flat_snapshot" }
pallet-tips = { git="https://github.com/cheme/substrate", branch="flat_snapshot" }
pallet-proxy = { git="https://github.com/cheme/substrate", branch="flat_snapshot" }
pallet-vesting = { git="https://github.com/cheme/substrate", branch="flat_snapshot" }
sc-basic-authorship = { git="https://github.com/cheme/substrate", branch="flat_snapshot" }
sp-consensus = { git="https://github.com/cheme/substrate", branch="flat_snapshot" }
sp-consensus-slots = { git="https://github.com/cheme/substrate", branch="flat_snapshot" }
sc-consensus = { git="https://github.com/cheme/substrate", branch="flat_snapshot" }
sc-consensus-babe = { git="https://github.com/cheme/substrate", branch="flat_snapshot" }
sc-consensus-babe-rpc = { git="https://github.com/cheme/substrate", branch="flat_snapshot" }
sc-consensus-epochs = { git="https://github.com/cheme/substrate", branch="flat_snapshot" }
sc-consensus-slots = { git="https://github.com/cheme/substrate", branch="flat_snapshot" }
sp-consensus-vrf = { git="https://github.com/cheme/substrate", branch="flat_snapshot" }
sp-consensus-aura = { git="https://github.com/cheme/substrate", branch="flat_snapshot" }
sp-wasm-interface = { git="https://github.com/cheme/substrate", branch="flat_snapshot" }
sc-finality-grandpa-rpc = { git="https://github.com/cheme/substrate", branch="flat_snapshot" }
sc-light = { git="https://github.com/cheme/substrate", branch="flat_snapshot" }
sc-sync-state-rpc = { git="https://github.com/cheme/substrate", branch="flat_snapshot" }
sp-arithmetic = { git="https://github.com/cheme/substrate", branch="flat_snapshot" }
sp-storage = { git="https://github.com/cheme/substrate", branch="flat_snapshot" }
sc-tracing = { git="https://github.com/cheme/substrate", branch="flat_snapshot" }
sp-test-primitives = { git="https://github.com/cheme/substrate", branch="flat_snapshot" }
substrate-build-script-utils = { git="https://github.com/cheme/substrate", branch="flat_snapshot" }
substrate-test-client = { git="https://github.com/cheme/substrate", branch="flat_snapshot" }
substrate-test-runtime = { git="https://github.com/cheme/substrate", branch="flat_snapshot" }
substrate-test-runtime-client = { git="https://github.com/cheme/substrate", branch="flat_snapshot" }
substrate-test-utils = { git="https://github.com/cheme/substrate", branch="flat_snapshot" }
substrate-wasm-builder = { git="https://github.com/cheme/substrate", branch="flat_snapshot" }
sp-npos-elections = { git="https://github.com/cheme/substrate", branch="flat_snapshot" }
sp-npos-elections-compact = { git="https://github.com/cheme/substrate", branch="flat_snapshot" }
pallet-offences-benchmarking = { git="https://github.com/cheme/substrate", branch="flat_snapshot" }
pallet-session-benchmarking = { git="https://github.com/cheme/substrate", branch="flat_snapshot" }
