[[bin]]
name = "polkadot"
path = "src/main.rs"

[package]
name = "polkadot"
description = "Implementation of a https://polkadot.network node in Rust based on the Substrate framework."
license = "GPL-3.0-only"
version = "0.9.5"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
readme = "README.md"

[dependencies]
polkadot-cli = { path = "cli", features = [ "kusama-native", "westend-native", "rococo-native" ]  }
color-eyre = { version = "0.5.11", default-features = false }
parity-util-mem = { version = "*", default-features = false, features = ["jemalloc-global"] }

[dev-dependencies]
assert_cmd = "1.0.2"
nix = "0.19.1"
tempfile = "3.2.0"

[workspace]
members = [
	"cli",
	"core-primitives",
	"erasure-coding",
	"primitives",
	"runtime/common",
	"runtime/common/slot_range_helper",
	"runtime/parachains",
	"runtime/polkadot",
	"runtime/kusama",
	"runtime/rococo",
	"runtime/westend",
	"runtime/test-runtime",
	"statement-table",
	"xcm",
	"xcm/xcm-builder",
	"xcm/xcm-executor",
	"xcm/pallet-xcm",
	"node/client",
	"node/collation-generation",
	"node/core/approval-voting",
	"node/core/av-store",
	"node/core/backing",
	"node/core/bitfield-signing",
	"node/core/candidate-validation",
	"node/core/chain-api",
	"node/core/dispute-coordinator",
	"node/core/dispute-participation",
	"node/core/parachains-inherent",
	"node/core/provisioner",
	"node/core/pvf",
	"node/core/runtime-api",
	"node/network/approval-distribution",
	"node/network/bridge",
	"node/network/protocol",
	"node/network/statement-distribution",
	"node/network/bitfield-distribution",
	"node/network/availability-distribution",
	"node/network/availability-recovery",
	"node/network/collator-protocol",
	"node/network/gossip-support",
	"node/overseer",
	"node/primitives",
	"node/service",
	"node/subsystem",
	"node/subsystem/dispatch-gen",
	"node/subsystem-test-helpers",
	"node/subsystem-util",
	"node/jaeger",
	"node/metered-channel",
	"node/test/client",
	"node/test/service",
	"parachain/test-parachains",
	"parachain/test-parachains/adder",
	"parachain/test-parachains/adder/collator",
]

# We want to be able to build the bridge relayer without pulling it (and all of its
# dependencies into the Polkadot workspace)
exclude = ["bridges/relays/bin-substrate", "bridges/bin/rialto/runtime", "bridges/bin/millau/runtime"]

[badges]
maintenance = { status = "actively-developed" }

# make sure dev builds with backtrace do
# not slow us down
[profile.dev.package.backtrace]
opt-level = 3

[profile.release]
# Polkadot runtime requires unwinding.
panic = "unwind"

[features]
runtime-benchmarks= [ "polkadot-cli/runtime-benchmarks" ]
try-runtime = [ "polkadot-cli/try-runtime" ]

# Configuration for building a .deb package - for use with `cargo-deb`
[package.metadata.deb]
name = "polkadot"
extended-description = "Implementation of a https://polkadot.network node in Rust based on the Substrate framework."
section = "misc"
maintainer = "martin@parity.io"
license-file = ["LICENSE", "0"]
# https://www.debian.org/doc/debian-policy/ch-maintainerscripts.html
maintainer-scripts = "scripts/packaging/deb-maintainer-scripts"
assets = [
	["target/release/polkadot", "/usr/bin/", "755"],
	["scripts/packaging/polkadot.service", "/lib/systemd/system/", "644"]
]
conf-files = [
	"/etc/default/polkadot"
]

# Configuration for building an .rpm package - for use with `cargo-rpm`
[package.metadata.rpm]
package = "polkadot"

[package.metadata.rpm.cargo]
buildflags = ["--release"]

[package.metadata.rpm.targets]
polkadot = { path = "/usr/bin/polkadot" }

[package.metadata.rpm.files]
"../scripts/packaging/polkadot.service" = { path = "/usr/lib/systemd/system/polkadot.service", mode = "644" }


[patch.'https://github.com/paritytech/substrate']
sp-core = { git="https://github.com/cheme/substrate", branch="prefix_limit" }
sc-client-api = { git="https://github.com/cheme/substrate", branch="prefix_limit" }
pallet-treasury = { git="https://github.com/cheme/substrate", branch="prefix_limit" }
pallet-randomness-collective-flip = { git="https://github.com/cheme/substrate", branch="prefix_limit" }
pallet-babe = { git="https://github.com/cheme/substrate", branch="prefix_limit" }
sp-trie = { git="https://github.com/cheme/substrate", branch="prefix_limit" }
sp-keyring = { git="https://github.com/cheme/substrate", branch="prefix_limit" }
pallet-timestamp = { git="https://github.com/cheme/substrate", branch="prefix_limit" }
frame-system = { git="https://github.com/cheme/substrate", branch="prefix_limit" }
frame-try-runtime = { git="https://github.com/cheme/substrate", branch="prefix_limit" }
frame-system-benchmarking = { git="https://github.com/cheme/substrate", branch="prefix_limit" }
pallet-staking = { git="https://github.com/cheme/substrate", branch="prefix_limit" }
frame-support = { git="https://github.com/cheme/substrate", branch="prefix_limit" }
pallet-session = { git="https://github.com/cheme/substrate", branch="prefix_limit" }
pallet-balances = { git="https://github.com/cheme/substrate", branch="prefix_limit" }
pallet-authorship = { git="https://github.com/cheme/substrate", branch="prefix_limit" }
sp-staking = { git="https://github.com/cheme/substrate", branch="prefix_limit" }
sp-runtime = { git="https://github.com/cheme/substrate", branch="prefix_limit" }
sp-io = { git="https://github.com/cheme/substrate", branch="prefix_limit" }
sp-std = { git="https://github.com/cheme/substrate", branch="prefix_limit" }
sp-inherents = { git="https://github.com/cheme/substrate", branch="prefix_limit" }
sp-api = { git="https://github.com/cheme/substrate", branch="prefix_limit" }
pallet-sudo = { git="https://github.com/cheme/substrate", branch="prefix_limit" }
frame-system-rpc-runtime-api = { git="https://github.com/cheme/substrate", branch="prefix_limit" }
pallet-staking-reward-curve = { git="https://github.com/cheme/substrate", branch="prefix_limit" }
pallet-offences = { git="https://github.com/cheme/substrate", branch="prefix_limit" }
pallet-nicks = { git="https://github.com/cheme/substrate", branch="prefix_limit" }
pallet-membership = { git="https://github.com/cheme/substrate", branch="prefix_limit" }
pallet-indices = { git="https://github.com/cheme/substrate", branch="prefix_limit" }
pallet-im-online = { git="https://github.com/cheme/substrate", branch="prefix_limit" }
pallet-identity = { git="https://github.com/cheme/substrate", branch="prefix_limit" }
pallet-grandpa = { git="https://github.com/cheme/substrate", branch="prefix_limit" }
frame-executive = { git="https://github.com/cheme/substrate", branch="prefix_limit" }
pallet-elections-phragmen = { git="https://github.com/cheme/substrate", branch="prefix_limit" }
pallet-election-provider-multi-phase = { git="https://github.com/cheme/substrate", branch="prefix_limit" }
frame-election-provider-support = { git="https://github.com/cheme/substrate", branch="prefix_limit" }
frame-metadata = { git="https://github.com/cheme/substrate", branch="prefix_limit" }
frame-support-test = { git="https://github.com/cheme/substrate", branch="prefix_limit" }
remote-externalities = { git="https://github.com/cheme/substrate", branch="prefix_limit" }
sc-informant = { git="https://github.com/cheme/substrate", branch="prefix_limit" }
sc-finality-grandpa-warp-sync = { git="https://github.com/cheme/substrate", branch="prefix_limit" }
sp-database = { git="https://github.com/cheme/substrate", branch="prefix_limit" }
substrate-browser-utils = { git="https://github.com/cheme/substrate", branch="prefix_limit" }
try-runtime-cli = { git="https://github.com/cheme/substrate", branch="prefix_limit" }
pallet-democracy = { git="https://github.com/cheme/substrate", branch="prefix_limit" }
pallet-collective = { git="https://github.com/cheme/substrate", branch="prefix_limit" }
pallet-transaction-payment-rpc = { git="https://github.com/cheme/substrate", branch="prefix_limit" }
pallet-transaction-payment-rpc-runtime-api = { git="https://github.com/cheme/substrate", branch="prefix_limit" }
pallet-transaction-payment = { git="https://github.com/cheme/substrate", branch="prefix_limit" }
pallet-authority-discovery = { git="https://github.com/cheme/substrate", branch="prefix_limit" }
sp-transaction-pool = { git="https://github.com/cheme/substrate", branch="prefix_limit" }
sp-version = { git="https://github.com/cheme/substrate", branch="prefix_limit" }
sp-session = { git="https://github.com/cheme/substrate", branch="prefix_limit" }
sp-offchain = { git="https://github.com/cheme/substrate", branch="prefix_limit" }
sp-consensus-babe = { git="https://github.com/cheme/substrate", branch="prefix_limit" }
pallet-recovery = { git="https://github.com/cheme/substrate", branch="prefix_limit" }
pallet-society = { git="https://github.com/cheme/substrate", branch="prefix_limit" }
fork-tree = { git="https://github.com/cheme/substrate", branch="prefix_limit" }
pallet-utility = { git="https://github.com/cheme/substrate", branch="prefix_limit" }
sc-network = { git="https://github.com/cheme/substrate", branch="prefix_limit" }
sc-cli = { git="https://github.com/cheme/substrate", branch="prefix_limit" }
sc-client-db = { git="https://github.com/cheme/substrate", branch="prefix_limit" }
sc-executor = { git="https://github.com/cheme/substrate", branch="prefix_limit" }
sc-service = { git="https://github.com/cheme/substrate", branch="prefix_limit" }
sc-keystore = { git="https://github.com/cheme/substrate", branch="prefix_limit" }
sp-authority-discovery = { git="https://github.com/cheme/substrate", branch="prefix_limit" }
sp-block-builder = { git="https://github.com/cheme/substrate", branch="prefix_limit" }
sp-blockchain = { git="https://github.com/cheme/substrate", branch="prefix_limit" }
sc-network-gossip = { git="https://github.com/cheme/substrate", branch="prefix_limit" }
sp-state-machine = { git="https://github.com/cheme/substrate", branch="prefix_limit" }
sp-externalities = { git="https://github.com/cheme/substrate", branch="prefix_limit" }
sp-runtime-interface = { git="https://github.com/cheme/substrate", branch="prefix_limit" }
sp-application-crypto = { git="https://github.com/cheme/substrate", branch="prefix_limit" }
sp-serializer = { git="https://github.com/cheme/substrate", branch="prefix_limit" }
sc-rpc = { git="https://github.com/cheme/substrate", branch="prefix_limit" }
substrate-frame-rpc-system = { git="https://github.com/cheme/substrate", branch="prefix_limit" }
sc-authority-discovery = { git="https://github.com/cheme/substrate", branch="prefix_limit" }
sc-chain-spec = { git="https://github.com/cheme/substrate", branch="prefix_limit" }
sc-finality-grandpa = { git="https://github.com/cheme/substrate", branch="prefix_limit" }
sc-telemetry = { git="https://github.com/cheme/substrate", branch="prefix_limit" }
sc-transaction-pool = { git="https://github.com/cheme/substrate", branch="prefix_limit" }
sp-timestamp = { git="https://github.com/cheme/substrate", branch="prefix_limit" }
sc-block-builder = { git="https://github.com/cheme/substrate", branch="prefix_limit" }
sp-finality-grandpa = { git="https://github.com/cheme/substrate", branch="prefix_limit" }
sp-tracing = { git="https://github.com/cheme/substrate", branch="prefix_limit" }
substrate-prometheus-endpoint = { git="https://github.com/cheme/substrate", branch="prefix_limit" }
sp-keystore = { git="https://github.com/cheme/substrate", branch="prefix_limit" }
frame-benchmarking = { git="https://github.com/cheme/substrate", branch="prefix_limit" }
frame-benchmarking-cli = { git="https://github.com/cheme/substrate", branch="prefix_limit" }
pallet-bounties = { git="https://github.com/cheme/substrate", branch="prefix_limit" }
pallet-multisig = { git="https://github.com/cheme/substrate", branch="prefix_limit" }
pallet-scheduler = { git="https://github.com/cheme/substrate", branch="prefix_limit" }
pallet-tips = { git="https://github.com/cheme/substrate", branch="prefix_limit" }
pallet-proxy = { git="https://github.com/cheme/substrate", branch="prefix_limit" }
pallet-vesting = { git="https://github.com/cheme/substrate", branch="prefix_limit" }
sc-basic-authorship = { git="https://github.com/cheme/substrate", branch="prefix_limit" }
sp-consensus = { git="https://github.com/cheme/substrate", branch="prefix_limit" }
sp-consensus-slots = { git="https://github.com/cheme/substrate", branch="prefix_limit" }
sc-consensus = { git="https://github.com/cheme/substrate", branch="prefix_limit" }
sc-consensus-babe = { git="https://github.com/cheme/substrate", branch="prefix_limit" }
sc-consensus-babe-rpc = { git="https://github.com/cheme/substrate", branch="prefix_limit" }
sc-consensus-epochs = { git="https://github.com/cheme/substrate", branch="prefix_limit" }
sc-consensus-slots = { git="https://github.com/cheme/substrate", branch="prefix_limit" }
sp-consensus-vrf = { git="https://github.com/cheme/substrate", branch="prefix_limit" }
sp-consensus-aura = { git="https://github.com/cheme/substrate", branch="prefix_limit" }
sp-wasm-interface = { git="https://github.com/cheme/substrate", branch="prefix_limit" }
sc-finality-grandpa-rpc = { git="https://github.com/cheme/substrate", branch="prefix_limit" }
sc-light = { git="https://github.com/cheme/substrate", branch="prefix_limit" }
sc-sync-state-rpc = { git="https://github.com/cheme/substrate", branch="prefix_limit" }
sp-arithmetic = { git="https://github.com/cheme/substrate", branch="prefix_limit" }
sp-storage = { git="https://github.com/cheme/substrate", branch="prefix_limit" }
sc-tracing = { git="https://github.com/cheme/substrate", branch="prefix_limit" }
sp-test-primitives = { git="https://github.com/cheme/substrate", branch="prefix_limit" }
substrate-build-script-utils = { git="https://github.com/cheme/substrate", branch="prefix_limit" }
substrate-test-client = { git="https://github.com/cheme/substrate", branch="prefix_limit" }
substrate-test-runtime = { git="https://github.com/cheme/substrate", branch="prefix_limit" }
substrate-test-runtime-client = { git="https://github.com/cheme/substrate", branch="prefix_limit" }
substrate-test-utils = { git="https://github.com/cheme/substrate", branch="prefix_limit" }
substrate-wasm-builder = { git="https://github.com/cheme/substrate", branch="prefix_limit" }
sp-npos-elections = { git="https://github.com/cheme/substrate", branch="prefix_limit" }
sp-npos-elections-compact = { git="https://github.com/cheme/substrate", branch="prefix_limit" }
pallet-offences-benchmarking = { git="https://github.com/cheme/substrate", branch="prefix_limit" }
pallet-session-benchmarking = { git="https://github.com/cheme/substrate", branch="prefix_limit" }
pallet-gilt = { git="https://github.com/cheme/substrate", branch="prefix_limit" }
pallet-mmr = { git="https://github.com/cheme/substrate", branch="prefix_limit" }
pallet-mmr-primitives = { git="https://github.com/cheme/substrate", branch="prefix_limit" }
pallet-mmr-rpc = { git="https://github.com/cheme/substrate", branch="prefix_limit" }
sp-rpc = { git="https://github.com/cheme/substrate", branch="prefix_limit" }
pallet-staking-reward-fn = { git="https://github.com/cheme/substrate", branch="prefix_limit" }
sp-maybe-compressed-blob = { git="https://github.com/cheme/substrate", branch="prefix_limit" }
sc-executor-common = { git="https://github.com/cheme/substrate", branch="prefix_limit" }
sc-executor-wasmtime = { git="https://github.com/cheme/substrate", branch="prefix_limit" }
sc-consensus-uncles = { git="https://github.com/cheme/substrate", branch="prefix_limit" }
sp-authorship = { git="https://github.com/cheme/substrate", branch="prefix_limit" }
sp-utils = { git="https://github.com/cheme/substrate", branch="prefix_limit" }
max-encoded-len = { git="https://github.com/cheme/substrate", branch="prefix_limit" }
max-encoded-len-derive = { git="https://github.com/cheme/substrate", branch="prefix_limit" }
